# AoC23

D1/: D1.hs
D2/: D2.cabal  Main.hs  P1.hs  P2.hs
D3/: D3.cabal  Main.hs  P1.hs
